Added most routes to swagger
